--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,8 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-10.1
+resolver: lts-11.1
+#allow-newer: true
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -40,7 +41,7 @@ packages:
 - templates
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: [enumerator-0.4.20]
+extra-deps: [enumerator-0.4.20, fdo-notify-0.3.1]
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
