--- a/stack.yaml
+++ b/stack.yaml
@@ -15,8 +15,9 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-11.1
-#allow-newer: true
+resolver: lts-11.12
+#resolver: nightly-2018-05-30
+allow-newer: true
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -41,7 +42,17 @@ packages:
 - templates
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: [enumerator-0.4.20, fdo-notify-0.3.1]
+extra-deps: 
+- enumerator-0.4.20
+- fdo-notify-0.3.1
+- happstack-server-7.5.1
+- sendfile-0.7.9
+- https://hackage.haskell.org/package/ghc-mod-5.9.0.0/candidate/ghc-mod-5.9.0.0.tar.gz
+- cabal-helper-0.8.0.2
+- djinn-ghc-0.0.2.3
+- djinn-lib-0.0.1.3  
+- ghc-syb-utils-0.2.3.3
+# http:// does not work in [ , , ] maybe " " would help
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
