--- a/stack.yaml
+++ b/stack.yaml
@@ -15,8 +15,8 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-11.12
-#resolver: nightly-2018-05-30
+resolver: lts-12.2
+#resolver: lts-11.18 # 8.2.2
 allow-newer: true
 
 # User packages to be built.
@@ -43,7 +43,7 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: 
-- enumerator-0.4.20
+#- enumerator-0.4.20
 - fdo-notify-0.3.1
 - happstack-server-7.5.1
 - sendfile-0.7.9
